--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -13,10 +13,10 @@
     <header class="fixed-header">
         <div class="header-content">
            <div class="logo">
-            <a href="index.html">Paylic</a>
+            <a href="../index.html">Paylic</a>
         </div>
             <nav>
-                <a href="index.html">Home</a>
+                <a href="../index.html">Home</a>
                 <a href="about.html">About Us</a>
                 <a href="contact.html">Contact</a>
             </nav>
