--- a/pages/contact.html
+++ b/pages/contact.html
@@ -13,18 +13,17 @@
     <header class="fixed-header">
         <div class="header-content">
             <div class="logo">
-            <a href="index.html">Paylic</a>
-        </div>
+                <a href="../index.html">Paylic</a>
+            </div>
             <nav>
-                <a href="index.html">Home</a>
-                <a href="about.html">About Us</a>
-                <a href="contact.html">Contact</a>
+                <a href="../index.html">Home</a>
+                <a href="../pages/about.html">About Us</a>
+                <a href="../pages/contact.html">Contact</a>
             </nav>
         </div>
     </header>
     <main>
-        <section class="tool-content">
-            <h2>Contact Us</h2>
+        <section class="tool-content contact-page-content"> <h2>Contact Us</h2>
             <p>
                 We value your feedback and are here to assist you with any questions or concerns you may have. Please feel free to reach out to us using the form below, and we will get back to you as soon as possible.
             </p>
@@ -50,8 +49,8 @@
     </main>
     <footer>
         <nav>
-            <a href="privacy.html">Privacy Policy</a>
-            <a href="terms.html">Terms of Service</a>
+            <a href="../pages/privacy.html">Privacy Policy</a>
+            <a href="../pages/terms.html">Terms of Service</a>
         </nav>
         <p>&copy; 2024 Paylic</p>
     </footer>
