--- a/pages/contact.html
+++ b/pages/contact.html
@@ -23,12 +23,12 @@
         </div>
     </header>
     <main>
-        <section class="tool-content contact-page-content"> <h2>Contact Us</h2>
+        <section class="tool-content contact-page-content">
+            <h2>Contact Us</h2>
             <p>
                 We value your feedback and are here to assist you with any questions or concerns you may have. Please feel free to reach out to us using the form below, and we will get back to you as soon as possible.
             </p>
-            <form class="contact-form">
-                <label for="name">Name:</label>
+            <form class="contact-form" id="contactForm"> <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
 
                 <label for="email">Email:</label>
@@ -54,5 +54,13 @@
         </nav>
         <p>&copy; 2024 Paylic</p>
     </footer>
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function() {
+            emailjs.init('YOUR_PUBLIC_KEY'); // Replace with your Public Key
+        })();
+    </script>
+    <script src="../scripts/contact.js"></script>
 </body>
 </html>
