--- a/pages/contact.html
+++ b/pages/contact.html
@@ -58,9 +58,9 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script type="text/javascript">
         (function() {
-            emailjs.init('YOUR_PUBLIC_KEY'); // Replace with your Public Key
+            emailjs.init('S-bfEvWeIPqaJWduk'); // Replace with your Public Key
         })();
     </script>
-    <script src="../scripts/contact.js"></script>
+    <script src="../contact.js"></script>
 </body>
 </html>
