--- a/pages/contact.html
+++ b/pages/contact.html
@@ -52,7 +52,7 @@
             <a href="../pages/privacy.html">Privacy Policy</a>
             <a href="../pages/terms.html">Terms of Service</a>
         </nav>
-        <p>&copy; 2024 Paylic</p>
+        <p>&copy; 2025 Paylic. All rights reserved.</p>
     </footer>
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
