--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -74,7 +74,7 @@
             <a href="privacy.html">Privacy Policy</a>
             <a href="terms.html">Terms of Service</a>
         </nav>
-        <p>&copy; 2024 Paylic</p>
+        <p>&copy; 2025 Paylic. All rights reserved.</p>
     </footer>
 </body>
 </html>
