--- a/tools/fdrd.html
+++ b/tools/fdrd.html
@@ -93,7 +93,7 @@
             <a href="../pages/privacy.html">Privacy Policy</a>
             <a href="../pages/terms.html">Terms of Service</a>
         </nav>
-        <p>&copy; 2024 Paylic</p>
+        <p>&copy; 2025 Paylic. All rights reserved.</p>
     </footer>
     <script src="fdrd.js"></script>
 </body>
