--- a/pages/terms.html
+++ b/pages/terms.html
@@ -54,10 +54,10 @@
         <p>We reserve the right to modify these Terms of Service at any time. Any changes will be effective immediately upon posting on our website. Your continued use of our website after any changes constitutes your acceptance of the new Terms of Service.</p>
 
         <strong>7. Governing Law</strong>
-        <p>These Terms of Service shall be governed by and construed in accordance with the laws of [Your Jurisdiction], without regard to its conflict of law provisions.</p>
+        <p>These Terms of Service shall be governed by and construed in accordance with the laws of India, without regard to its conflict of law provisions.</p>
 
         <strong>8. Contact Us</strong>
-        <p>If you have any questions about these Terms of Service, please contact us at [Your Contact Information].</p>
+        <p>If you have any questions about these Terms of Service, please contact us at <a href="contact.html">Your Contact Information</a>.</p>
 
     </main>
     <footer>
