--- a/pages/terms.html
+++ b/pages/terms.html
@@ -57,7 +57,7 @@
         <p>These Terms of Service shall be governed by and construed in accordance with the laws of India, without regard to its conflict of law provisions.</p>
 
         <strong>8. Contact Us</strong>
-        <p>If you have any questions about these Terms of Service, please contact us at <a href="contact.html">Your Contact Information</a>.</p>
+        <p>If you have any questions about these Terms of Service, please contact us through <a href="contact.html">The Contact Form</a>.</p>
 
     </main>
     <footer>
