--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <article>
                 <h3>5 Tips for Effective Budgeting</h3>
                 <p>Learn how to create a budget that works for you and achieve your financial goals.</p>
-                <a href="../blog/budget-tips.html" class="read-more">Read More</a>
+                <a href="./pages/budget-tips.html" class="read-more">Read More</a>
             </article>
             <div class="quick-tips">
                 <h4>Quick Tips</h4>
