--- a/pages/budget-tips.html
+++ b/pages/budget-tips.html
@@ -78,8 +78,8 @@
 
     <footer>
         <nav>
-            <a href="./pages/privacy.html">Privacy Policy</a>
-            <a href="./pages/terms.html">Terms of Service</a>
+            <a href="../pages/privacy.html">Privacy Policy</a>
+            <a href="../pages/terms.html">Terms of Service</a>
         </nav>
         <p>&copy; 2025 Paylic. All rights reserved.</p>
     </footer>
