--- a/pages/budget-tips.html
+++ b/pages/budget-tips.html
@@ -23,12 +23,12 @@
     <header class="fixed-header">
         <div class="header-content">
             <div class="logo">
-                <a href="../index.html">Paylic</a>
+                <a href="./index.html">Paylic</a>
             </div>
             <nav>
-                 <a href="../index.html">Home</a>
-                <a href="../pages/about.html">About Us</a>
-                <a href="../pages/contact.html">Contact</a>
+                 <a href="./index.html">Home</a>
+                <a href="pages/about.html">About Us</a>
+                <a href="pages/contact.html">Contact</a>
             </nav>
         </div>
     </header>
