--- a/pages/budget-tips.html
+++ b/pages/budget-tips.html
@@ -27,8 +27,8 @@
             </div>
             <nav>
                  <a href="../index.html">Home</a>
-                <a href="./pages/about.html">About Us</a>
-                <a href="./pages/contact.html">Contact</a>
+                <a href="/pages/about.html">About Us</a>
+                <a href="/pages/contact.html">Contact</a>
             </nav>
         </div>
     </header>
